# scan-repos

./: .gitignore  Makefile  Makefile.am  README  README.md  clean-git-repos  clone-all-gits  configure.ac  init-git  pull-all-gits  scan-repos  sync-all-gits  sync-git
test/: .gitignore  Makefile  branch_ahead.output.ref  branch_behind.output.ref  branch_name.output.ref  deleted_file.output.ref  fetch_all.output.ref  modified_file.output.ref  multiple_repospaths.output.ref  multiple_repospaths_curdir.output.ref  no_tracking.output.ref  no_tracking_detached_head.output.ref  pull.output.ref  push.output.ref  push_all.output.ref  push_conflict_clone.output.ref  repospath_inside.output.ref  repospath_outside_envvarrelcur.output.ref  space.output.ref  space_2_repos.output.ref  submodule_notinit.output.ref  submodules.output.ref  submodules_detached.output.ref  submodules_init.output.ref  submodules_noinit.output.ref  submodules_recursive_detached.output.ref  submodules_recursive_init.output.ref  submodules_recursive_noinit.output.ref  test-scan-repos  test-scan-repos-old-style  test-scan-repos.sh  unknown_option.output.ref  untracked_file.output.ref
